--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/webbuilds.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webbuilds.data.br",
-        frameworkUrl: buildUrl + "/webbuilds.framework.js.br",
-        codeUrl: buildUrl + "/webbuilds.wasm.br",
+        dataUrl: buildUrl + "/webbuilds.data",
+        frameworkUrl: buildUrl + "/webbuilds.framework.js",
+        codeUrl: buildUrl + "/webbuilds.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
